# yolo41

./: .gitignore  README.md  config.toml  flake.nix  pyproject.toml  requirements-colab.txt  requirements-stable-python313.txt  requirements.txt  test41.ipynb
notebooks/: multicrop_voting.ipynb  multicrop_voting_cells.md  run_all_no_subprocess.ipynb  run_all_no_subprocess.md  setup_no_subprocess.md  stable_training_cells.md
scripts/: check_labels.py  download_dataset.py  draw_ground_truth.py  install_deps.py  multi_crop_voting_predict.py
src/yolo_chess/: config.py  dataset.py  demo_shapes.py  download.py  font_utils.py  gt_viz.py  infer.py  losses.py  model.py  multi_crop_voting.py  notebook_api.py  orientation_viz.py  predict.py  train.py
src/yolov3_chess_homework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
