[project]
name = "yolov3-chess-homework"
version = "0.2.0"
description = "YOLOv3 from lesson, trained from scratch on chess pieces"
requires-python = ">=3.14"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
